--- a/doc/otsdaq_mu2e.org
+++ b/doc/otsdaq_mu2e.org
@@ -9,7 +9,7 @@
 ** [[https://docs.google.com/presentation/d/1wzSJMK3fCoW2aZ_sdO1jg0n8WoykJR7MJ1ILqp3kEAI/edit#slide=id.p][OTSDAQ intro by Ryan]]
 ** [[file:build_instructions.org][build instructions]]
 ** event format                                                              
-** artdaq::Fragment
+** artdaq::Fragment                                                          
    - fragment type: tells the type of the data stored in the fragment
    - fragment ID  : in essense, the fragment generator type
      - a single generator can write out fragments of different types
@@ -26,11 +26,14 @@ mu2etrk@mu2edaq09:~/test_stand/pasha_018>ps aux | grep datalogger | grep -v grep
 mu2etrk  15636  0.0  0.0 16546880 13112 pts/3  Sl   19:43   0:00 datalogger -c id: 18102 commanderPluginType: xmlrpc rank: 2 application_name: logger0 partition_number: 8
 #+end_src 
 ** [[file:xdaq.org][XDAQ]]
-** [[file:hardware.org][Mu2e DAQ hardware]]
+** [[file:dtc.org][DTC]]
+** [[file:rocs.org][ROCs]]
+** [[https://mu2e-docdb.fnal.gov/cgi-bin/sso/ShowDocument?docid=19095][mu2e-19095]] : Mu2e beam timing
+** [[https://mu2e-docdb.fnal.gov/cgi-bin/sso/RetrieveFile?docid=37376&filename=20220922_DAQNodes.pdf][mu2e-37376]] : DAQ node configuration in the DAQ room 
 ** [[file:trace.org][TRACE]] 
 ** [[file:configure_and_run.org][how to configure and run OTSDAQ]]
 ** [[file:partitions.org][partitions]]                                                           
-** existing DAQ configurations
+** existing DAQ configurations                                                
 - at present, each system configuration combines two groups of OTS tables.
 
 |---------------------------+-------------------------------+-------------------------------+---------------------------------------|
@@ -63,6 +66,10 @@ mu2etrk  15636  0.0  0.0 16546880 13112 pts/3  Sl   19:43   0:00 datalogger -c i
 - ots need to write dbg file in the mu2edcs@mu2e-dsc-01 epics ioc folder 
 - so ask Eric to configure it in otsdaq configuration
 - after that, if dbg flies is writing correctly ots is writing the new PVs and/or new configuration also in the dcs_archiver
+#+begin_src   
+ssh -f -KX -N -L 5434:mu2e-dcs-01:5434 -J mu2eshift@mu2egateway01.fnal.gov mu2eshift@mu2e-dcs-01.fnal.gov
+#+end_src 
+
 ** [[file:db_tables.org][Mongo DB and the DB tables]] 
 * ------------------------------------------------------------------------------
 * ATTIC
