crv: added the crv_vst config to the documentation

--- a/doc/otsdaq_mu2e.org
+++ b/doc/otsdaq_mu2e.org
@@ -50,6 +50,8 @@ mu2etrk  15636  0.0  0.0 16546880 13112 pts/3  Sl   19:43   0:00 datalogger -c i
 |---------------------------+-------------------------------+-------------------------------+---------------------------------------|
 | cal_vst_sidet             | CalVstSidetContext            | CalVstDqmConfig               |                                       |
 |---------------------------+-------------------------------+-------------------------------+---------------------------------------|
+| crv_vst                   | CrvVSTContext                 | CrvVSTConfig                  |                                       |
+|---------------------------+-------------------------------+-------------------------------+---------------------------------------|
 
 ** [[file:otsdaq_terminology.org][OTSDAQ terminology]]                                                         
 ** [[file:otsdaq_q_and_a.org][OTSDAQ Q&A]]           
